# nerve_center

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
src/: app.rs  cli.rs  client.rs  command.rs  hooks.rs  input.rs  lib.rs  main.rs  project_id.rs  projects.rs  tui.rs  ui.rs  wezterm.rs  workspace.rs
src/daemon/: agent.rs  mod.rs  ops.rs  protocol.rs  refresh.rs  server.rs  state.rs
