[package]
name = "nerve_center"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/favetelinguis/nerve_center"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.23"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
